# smol-blueprint

./: README.md  pyproject.toml
rag/: building.ipynb  indexing.ipynb
