[project]
name = "smol-blueprint"
version = "0.1.0"
description = "A smol blueprint for AI development, focusing on applied examples of RAG, information extraction, analysis and fine-tuning in the age of LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.2.0",
    "gradio>=5.12.0",
    "gradio-client>=1.5.4",
    "huggingface-hub[cli]>=0.27.1",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "markdown>=3.7",
    "torch>=2.5.1",
    "transformers>=4.48.0",
]

[dependency-groups]
scraping = [
    "scrapegraphai>=1.36.0",
]
rag = [
    "duckdb>=1.1.3",
    "markdown>=3.7",
    "model2vec>=0.3.5",
    "sentence-transformers>=3.3.1",
    "vicinity[hnsw]>=0.4.0",
]
information-extraction = [
    "instructor>=1.7.2",
    "outlines>=0.1.12",
]
agents = [
    "smolagents>=1.2.2",
]
